# your_salary

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app_run.py  envexample  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: your_salary_build.yml  your_salary_tests.yml
infra/: docker-compose.main.yaml  docker-compose.test.yaml  docker-compose.yaml  envexample
infra/nginx/: default.conf
load_data/: main.py
src/: api_main.py
src/api/: base_router.py
src/api/v1/request_models/: base_request.py  department.py  position.py  product.py  salary.py  user.py  validators.py
src/api/v1/response_models/: department.py  error.py  position.py  salary.py  user.py  users.py
src/api/v1/routers/: __init__.py  department.py  departments.py  hello.py  position.py  positions.py  products.py  salaries.py  salary.py  user.py  users.py
src/core/: custom_exceptions.py  settings.py
src/core/exc/: custom_exceptions.py  exc_handlers.py
src/core/services/: authentication_service.py  department_service.py  departments_service.py  departments_servise.py  permissions.py  position_service.py  positions_service.py  salaries_service.py  salary_service.py  user_service.py  users_service.py
src/data_base/: DTO_models.py  base.py  models.py
src/data_base/crud/: __init__.py  base_crud.py  department_crud.py  position_crud.py  salary_crud.py  user_crud.py
src/data_base/migrations/: README  README.md  env.py
tests/: conftest.py  test_auth.py  test_department_urls.py  test_position_urls.py  test_salary_urls.py  test_user_urls.py  user_urls.py
(+5 files in other folders)
