[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"

[tool.poetry]
name = "your salary"
version = "0.1.0"
description = "Test task for CFT"
authors = ["Ilia Steblyan <stebljan@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
fastapi = "0.95.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.28.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
aiosqlite = "^0.19.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
